--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,9 @@ body{
 }
 .font-title{
     font-family: "Satisfy", sans-serif;
-
+}
+.font-roboto{
+    font-family: "Roboto", sans-serif;
 }
 
 @layer base{
